# samesame-rolling

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  publish.sh
docs/design/: 2026-03-10-125557-when-i-run-the-rolling-hash-version-of-the-samesam.txt  rolling-hash-prd.md  rolling-hash-tasks.md
scripts/: publish-test.sh  publish.sh
src/: discovery.rs  file.rs  grouping.rs  lib.rs  main.rs  output.rs  rolling_hash.rs  union_find.rs
tests/: test_cli.rs  test_discovery.rs  test_output.rs  test_types.rs
