[package]
name = "samesame"
version = "1.2.1"
edition = "2024"
description = "A tool to identify repeated fragments of code across multiple files"
license = "MIT"
repository = "https://github.com/hughdbrown/samesame"
keywords = ["duplicate", "code", "hash", "analysis"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
thiserror = "2"
blake3 = "1.8.3"
regex = "1"

[profile.release]
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3.24.0"
